--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,4 +40,28 @@
         app:layout_constraintTop_toBottomOf="@+id/ytext"
         app:layout_constraintVertical_bias="0.11" />
 
+    <TextView
+        android:id="@+id/stepCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:text="Step Counter"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/ztext"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="@+id/ztext"
+        app:layout_constraintTop_toBottomOf="@+id/ztext" />
+
+    <TextView
+        android:id="@+id/stepDetector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:text="Step Detector"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/stepCounter"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/stepCounter"
+        app:layout_constraintTop_toBottomOf="@+id/stepCounter" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
